--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "wallet",
   "version": "1.0.0",
-  "main": "src/server.ts",
+  "main": "build/server.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server.ts",
+    "start": "npm run build && node build/server.js",
     "build": "tsc -p .",
-    "dev": "nodemon ./src/server.ts"
+    "dev": "nodemon"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
